fix(bal-checkbox): align box in the checkbox properly

--- a/packages/components/src/styles/components/radio-checkbox.sass
+++ b/packages/components/src/styles/components/radio-checkbox.sass
@@ -113,7 +113,7 @@
       display: inline-block
       position: absolute
       left: 0
-      margin-top: 0
+      top: 4px
       height: 1.5rem
       width: 1.5rem
       background-color: transparent
@@ -154,7 +154,7 @@
         width: 7px
         height: 13px
         left: 9px
-        margin-top: -3px
+        margin-top: 4px
         transform: rotate(45deg)
   //
   // Symbol colors main, inverted and background
@@ -208,6 +208,11 @@
     &:active
       border-color: var(--bal-color-blue-6)
       background: var(--bal-color-grey-2)
+    label
+      &::before
+        top: unset
+      &::after
+        margin-top: 28px
   &--select-button#{&}--checked
     background: var(--bal-color-primary)
     .bal-radio-checkbox__label
